--- a/ChiaPlotStatusGUI/ChiaPlotStatusGUI.csproj
+++ b/ChiaPlotStatusGUI/ChiaPlotStatusGUI.csproj
@@ -25,6 +25,25 @@
     <ProjectReference Include="..\ChiaPlotStatusLib\ChiaPlotStatusLib.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Packaging.Targets" Version="0.1.1-*" />
+    <DotNetCliToolReference Include="dotnet-deb" Version="0.1.1-*" />
+  </ItemGroup>
+    <ItemGroup Condition="'$(RuntimeIdentifier)'=='linux-x64' OR '$(RuntimeIdentifier)'=='linux-arm'">
+    <Content Include="chia-plot-status.desktop" CopyToPublishDirectory="Always" LinuxFileMode="0755">
+        <LinuxPath>/usr/share/applications/chia-plot-status.desktop</LinuxPath>
+    </Content>
+  </ItemGroup>
+    <ItemGroup Condition="'$(RuntimeIdentifier)'=='linux-x64' OR '$(RuntimeIdentifier)'=='linux-arm'">
+    <Content Include="chia-plot-status.png" CopyToPublishDirectory="Always" LinuxFileMode="0755">
+        <LinuxPath>/usr/share/pixmaps/chia-plot-status.png</LinuxPath>
+    </Content>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="Packaging.Targets" Version="0.1.1-*" />
+    <DotNetCliToolReference Include="dotnet-rpm" Version="0.1.1-*" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Update="GUI\App.axaml.cs">
       <DependentUpon>%(Filename)</DependentUpon>
     </Compile>
