--- a/ChiaPlotStatusCli/ChiaPlotStatusCli.csproj
+++ b/ChiaPlotStatusCli/ChiaPlotStatusCli.csproj
@@ -1,5 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
@@ -7,14 +6,12 @@
     <ApplicationIcon>Icon - Color changed.ico</ApplicationIcon>
     <Authors>grayfallstown</Authors>
     <Company>grayfallstown</Company>
+    <Version>0.9.8</Version>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.8.0" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\ChiaPlotStatusLib\ChiaPlotStatusLib.csproj" />
   </ItemGroup>
-
 </Project>
