--- a/ChiaPlotStatusLib/ChiaPlotStatusLib.csproj
+++ b/ChiaPlotStatusLib/ChiaPlotStatusLib.csproj
@@ -1,6 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+	<RuntimeIdentifiers>win7-x64;ubuntu.16.10-x64;linux-x64</RuntimeIdentifiers>
+
     <Company>grayfallstown</Company>
     <Authors>grayfallstown</Authors>
     <Product>ChiaPlotStatusLib</Product>
