refs #39 Made marking multiple processes as dead a lot easier

--- a/ChiaPlotStatusGUI/GUI/Assets/en.yaml
+++ b/ChiaPlotStatusGUI/GUI/Assets/en.yaml
@@ -19,6 +19,9 @@ Buttons:
     Yaml: "Yaml"
     CSV: "CSV"
     MarkAsDead: "Mark as dead"
+    SelectAllConcerningCommand: "Select concerning"
+    SelectAllPossiblyDeadCommand: "Selected possibly dead"
+    MarkSelectionAsDead: "Mark selected logs as dead"
     UnmarkAsDead: "Unmark as dead"
     Abort: "Cancel"
     Copy: "Copy"
