refs #44 added ability to attach notes/tags to plotlogs

--- a/ChiaPlotStatusGUI/GUI/Assets/en.yaml
+++ b/ChiaPlotStatusGUI/GUI/Assets/en.yaml
@@ -25,6 +25,7 @@ Buttons:
     UnmarkAsDead: "Unmark as dead"
     Abort: "Cancel"
     Copy: "Copy"
+    Save: "Save"
 
 Columns:
     Tmp1Drive: "Tmp1"
@@ -69,6 +70,7 @@ Columns:
     CopyTimeAvgTimeNeed: "Copy avg 🕐"
     TotalAvgTimeNeed: "Total avg 🕐"
     Phase1Completed: "Sample Size"
+    Note: "Note/Tags"
 
 Tooltips:
     JsonExport: "Export shown data to Json. Check <Raw Export> if you want plain unformatted numbers."
@@ -210,7 +212,9 @@ Tooltips:
         If your logging is not messed up and logging multiple processes in parallel to the same file this means
         the process is dead.
     LastLogLine: >
-        "Last line in this plots log file"
+        Last line in this plots log file
     PlaceInLogFile: >
-         When using --num 20 to plot 20 plots in a row this shows you the current plot nr on the left and the
-         size of the queue on the right
+        When using --num 20 to plot 20 plots in a row this shows you the current plot nr on the left and the
+        size of the queue on the right
+    Note: >
+        Here you can add notes and tags to group plot logs and compare performance.
