--- a/ChiaPlotStatusGUI/ChiaPlotStatusGUI.csproj
+++ b/ChiaPlotStatusGUI/ChiaPlotStatusGUI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
@@ -45,6 +45,9 @@
     </Compile>
     <Compile Update="GUI\Views\MainWindow.axaml.cs">
       <DependentUpon>%(Filename)</DependentUpon>
+    </Compile>
+    <Compile Update="GUI\Views\NoteDialog.axaml.cs">
+      <DependentUpon>NoteDialog.axaml</DependentUpon>
     </Compile>
     <Compile Update="GUI\Views\StatisticsDialog.axaml.cs">
       <DependentUpon>StatisticsDialog.axaml</DependentUpon>
