--- a/ChiaPlotStatusGUI/GUI/Assets/en.yaml
+++ b/ChiaPlotStatusGUI/GUI/Assets/en.yaml
@@ -71,6 +71,19 @@ Columns:
     TotalAvgTimeNeed: "Total avg 🕐"
     Phase1Completed: "Sample Size"
     Note: "Note/Tags"
+    TotalEligiblePlots: "Eligible Plots"
+    FoundProofs: "Found Proofs"
+    BestLookupTime: "Best Lookup Time"
+    WorstLookupTime: "Worst Lookup Time"
+    AvgLookupTime: "Avg Lookup Time"
+    FilterRatio: "Filter Ratio"
+    TotalPlots: "Total Plots"
+    ChallengesPerMinute: "Challenges per Minute"
+    AvgHeat: "Avg Heat"
+    MaxHeat: "Max Heat"
+    MinHeat: "Min Heat"
+    AvgEligiblePlots: "Avg eligible Plots"
+
 
 Tooltips:
     JsonExport: "Export shown data to Json. Check <Raw Export> if you want plain unformatted numbers."
@@ -218,3 +231,53 @@ Tooltips:
         size of the queue on the right
     Note: >
         Here you can add notes and tags to group plot logs and compare performance.
+
+    TotalEligiblePlots: >
+        Plots that could have provided proofs for the challanges (for a reward).
+        1/512 chance per plot, per challenge.
+        Maybe they did actually contain a proof, maybe not.
+        Even if, this does not mean you earned Chia as the best proof provided by anyone gets rewarded, not everyone who delivers a proof.
+    AvgEligiblePlots: >
+        Average number of plots that can provide proofs for the challanges (for a reward) given in the timeframe from begin to end of your logfiles.
+        1/512 chance per plot, therefor should be somewhere around 0.001953125.
+        If the number is higher, luccky you.
+        If it is a lot lower, well something is wrong unless you do not have many plots, like less than 50 or so or if you do not have a lot of data.
+        if you have just set the log level to INFO, this means practically nothing.
+        Wait a few hours to see any relevant value.
+        The less plots you have, the longer it takes for this value to become relevant.
+        Do you have a thousand plots? This value could become meaningfull after one to three hours.
+        Do you have less than 100 plots? Wait at least a day, maybe a week.
+    FoundProofs: >
+        Number of Proofs found.
+        A found proof does not necessarily mean you won chia, as the best submitted proof is picked.
+    BestLookupTime: >
+        Lookup time increases when a plot does actually contain proofs.
+        Best lookup time does therefor not tell you much unless it is high.
+    WorstLookupTime: >
+        Lookup time increases when a plot does actually contain proofs.
+        You have 30 seconds to submit a proof once a challenge is started.
+        Keep in mind that the proof needs to be transfered to a lot of nodes to be successfull.
+        Because of this the worst lookup time should not be larger that 5 seconds.
+    AvgLookupTime: >
+        Lookup time increases when a plot does actually contain proofs.
+        You have 30 seconds to submit a proof once a challenge is started.
+        Keep in mind that the proof needs to be transfered to a lot of nodes to be successfull.
+        Because of this the avg lookup time should not be larger that ~2 seconds.
+    FilterRatio: >
+        Number of elgible plots divided by the total nr of plots.
+        Shout be somewhere around 1/512 (0.001953125).
+        Higher is better, way lower means something is seriously wrong.
+    TotalPlots: >
+        Total nr of plots that harvester uses to harvest.
+    ChallengesPerMinute: >
+        Number of challenges this harvester handled per minute
+    AvgHeat: >
+        The nearer this gets to 5 (or even above 5) the worse your harvester works.
+        NAS does not work well with chia.
+    MaxHeat: >
+        The nearer this gets to 5 (or even above 5) the worse your harvester works, but Avg Heat is more important.
+        NAS does not work well with chia.
+    MinHeat: >
+        Should be as low as possible.
+        The nearer this gets to 5 (or even above 5) the worse your harvester works, but Avg and Max Heat are more important.
+        NAS does not work well with chia.
