--- a/ChiaPlotStatusGUI/ChiaPlotStatusGUI.csproj
+++ b/ChiaPlotStatusGUI/ChiaPlotStatusGUI.csproj
@@ -19,6 +19,16 @@
     <Content Include="chia-plot-status.desktop" CopyToPublishDirectory="Always" LinuxFileMode="0755">
       <LinuxPath>/usr/share/applications/chia-plot-status.desktop</LinuxPath>
     </Content>
+   
+  </ItemGroup>
+  <ItemGroup>
+      <DebDotNetDependencies Include="libc4 | libc5 | libc6 | libc7 | libc8 | libc9 | libc10 | libc11 | libc12 | libc13"/>  
+      <DebDotNetDependencies Include="libgcc1 | libgcc2 | libgcc3 | libgcc4 | libgcc5 | libgcc6 | libgcc7 | libgcc8 | libgcc9"/>
+      <DebDotNetDependencies Include="libgssapi-krb5-2"/>
+      <DebDotNetDependencies Include="libstdc++12 | libstdc++11 | libstdc++10 | libstdc++9 | libstdc++9 | libstdc++7 | libstdc++6"/>
+      <DebDotNetDependencies Include="zlib1g"/>
+      <DebDotNetDependencies Include="libssl1.3 | libssl1.1.1 | libssl1.2 | libssl1.1 | libssl1.0.2 | libssl1.0.1 | libssl1.0.0 | libssl0.9.8"/>
+      <DebDotNetDependencies Include="libicu74 | libicu73 | libicu72 | libicu71 | libicu70 | libicu69 | libicu68 | libicu67 |libicu66 | libicu65 | libicu64 | libicu63 | libicu62 | libicu61 | libicu60 | libicu59 | libicu58 | libicu57 | libicu56 | libicu55 | libicu54 | libicu53 | libicu52"/>
   </ItemGroup>
   <ItemGroup>
     <Content Include="chia-plot-status.png" CopyToPublishDirectory="Always" LinuxFileMode="0755">
