--- a/ChiaPlotStatusGUI/ChiaPlotStatusGUI.csproj
+++ b/ChiaPlotStatusGUI/ChiaPlotStatusGUI.csproj
@@ -61,6 +61,9 @@
     <Compile Update="GUI\Views\NoteDialog.axaml.cs">
       <DependentUpon>NoteDialog.axaml</DependentUpon>
     </Compile>
+    <Compile Update="GUI\Views\ChiaPlotterDialog.axaml.cs">
+      <DependentUpon>ChiaPlotterDialog.axaml</DependentUpon>
+    </Compile>
     <Compile Update="GUI\Views\StatisticsDialog.axaml.cs">
       <DependentUpon>StatisticsDialog.axaml</DependentUpon>
     </Compile>
