setup gui2 (wip). semi-functional: plot logs, plot log folders

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ ChiaPlotStatusLib/.vs
 ChiaPlotStatusGUI/obj
 ChiaPlotStatusGUI/bin
 ChiaPlotStatusGUI/.vs
+ChiaPlotStatusGUI2/obj
+ChiaPlotStatusGUI2/bin
+ChiaPlotStatusGUI2/.vs
 ChiaPlotStatusCli/obj
 ChiaPlotStatusCli/bin
 ChiaPlotStatusCli/.vs
